Popravek v README.md