@@ -1,2 +1,3 @@
 # AdventOfCode2024
-Advent Of Code 2024
+
+Koda namenjena za rešiti probleme Advent Of Code 2024. Vsa koda bo izdelana z uporabo Jave 23 in prevedena z uporabo zastavice --enable-preview.
